--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'GownBatang';
+    src: url('/fonts/GowunBatang-Regular.ttf');
+}
+
+body * {
+    font-family: 'GownBatang';
+}
+
+*::-webkit-scrollbar {
+    width: 5px;
+}
+*::-webkit-scrollbar-thumb {
+    height: 10%;
+    border-radius: 5px;
+    background-color: rgb(204, 204, 204);
+}
